crates/views/re_view_spatial/tests/snapshots/topology_errors__empty_coordinate_frame_name_falls_back_to_implicit_frame.snap
---
source: crates/views/re_view_spatial/tests/topology_errors.rs
expression: "snapshot_visualizer_errors(&test_context, view_id)"
---
"Points3D": /points3d_entity: CoordinateFrame has an empty frame ID; falling back to the implicit frame "tf#/points3d_entity".
